# amdgpu-windows-interop-glog-fork

./: LICENSE
.glog/: glog-scan.sarif
20250414a/hsail-compiler/lib/loaders/elf/: elf.cpp  elf_utils.cpp  elf_utils.hpp
20250414a/hsail-compiler/lib/loaders/elf/utils/: CMakeLists.txt
20250414a/hsail-compiler/lib/loaders/elf/utils/common/: _elftc.h  native-elf-format.h
20250414a/hsail-compiler/lib/loaders/elf/utils/common/win32/sys/: cdefs.h  elf64.h  param.h  queue.h
20250414a/hsail-compiler/lib/loaders/elf/utils/libelf/: CMakeLists.txt  _libelf.h  _libelf_ar.h  elf_begin.c  gelf_shdr.c  libelf_allocate.c  libelf_ar.c  libelf_convert.c  libelf_ehdr.c  libelf_extended.c  libelf_fsize.c  libelf_phdr.c  memfile.h  roundup.h
20250414a/pal/inc/core/: pal.h  palCmdAllocator.h  palFence.h  palFormat.h  palQueueSemaphore.h
20250414a/pal/inc/gpuUtil/: palRenderOpTraceController.h
20250414a/pal/inc/util/: palInlineFuncs.h  palMutex.h  palUtil.h
20250414a/pal/lib/Release/x64/: DriverUtilsService.lib  addrlib.lib  ddEventClient.lib  ddEventStreamer.lib  ddRpcClient.lib  ddRpcShared.lib  ddSocket.lib  dd_libyaml.lib  palCompilerDeps.lib  zstd.lib
20250414a/pal/shared/metrohash/src/: metrohash64.cpp
20250414a/sc/HSAIL/ext/libamdhsacode/: amd_hsa_code.cpp  amd_hsa_code_util.cpp
20250414a/sc/HSAIL/ext/loader/: AMDHSAKernelDescriptor.h  executable.cpp  executable.hpp
20250414a/sc/HSAIL/include/: amd_elf_image.hpp  amd_hsa_code.hpp  amd_hsa_loader.hpp  amd_hsa_program.hpp
20250414a/sc/HSAIL/include/public/: amdid.h
20250515a/pal/: CMakeLists.txt
20250515a/pal/inc/core/: pal.h  palCmdBuffer.h  palDeveloperHooks.h  palDevice.h  palFence.h  palFormat.h  palImage.h  palLib.h  palPerfExperiment.h  palPipeline.h  palQueue.h  palQueueSemaphore.h
20250515a/pal/inc/gpuUtil/: palGpaSession.h
20250515a/pal/inc/util/: palAssert.h  palEvent.h  palFile.h  palHashBaseImpl.h  palInlineFuncs.h  palMutex.h  palSysUtil.h  palUtil.h
20250515a/pal/lib/Release/x64/: DriverUtilsService.lib  SettingsRpcService2.lib  UberTraceService.lib  addrlib.lib  amdrdf.lib  cwpack.lib  ddCommon.lib  ddCore.lib  ddEventClient.lib  ddEventParser.lib  ddEventServer.lib  ddEventStreamer.lib  ddNet.lib  ddRpcClient.lib  ddRpcServer.lib  ddRpcShared.lib  ddSocket.lib  ddYaml.lib  dd_common.lib  dd_libyaml.lib  dd_settings.lib  devdriver.lib  metrohash.lib  mpack.lib  pal.lib  palCompilerDeps.lib  palUtil.lib  pal_lz4.lib  pal_uuid.lib  stb_sprintf.lib  vam.lib  zstd.lib
20250515a/pal/shared/metrohash/: CMakeLists.txt
20250515a/pal/shared/metrohash/src/: platform.h
20250515a/sc/HSAIL/ext/loader/: loaders.cpp
20250515a/sc/HSAIL/include/: amd_hsa_kernel_code.h
20250722a/pal/: CMakeLists.txt  LICENSE
20250722a/pal/inc/core/: pal.h  palCmdBuffer.h  palDeveloperHooks.h  palDevice.h  palGpuMemory.h  palGpuMemoryBindable.h  palLib.h  palPipeline.h  palQueryPool.h  palQueue.h  palQueueSemaphore.h  palShaderLibrary.h
20250722a/pal/inc/util/: palEvent.h  palHashBase.h  palInlineFuncs.h  palSysUtil.h
20250722a/pal/lib/Release/x64/: DriverUtilsService.lib  SettingsRpcService2.lib  UberTraceService.lib  addrlib.lib  amdrdf.lib  cwpack.lib  ddCommon.lib  ddCore.lib  ddEventClient.lib  ddEventParser.lib  ddEventServer.lib  ddEventStreamer.lib  ddNet.lib  ddRpcClient.lib  ddRpcServer.lib  ddRpcShared.lib  ddSocket.lib  ddYaml.lib  dd_common.lib  dd_libyaml.lib  dd_settings.lib  devdriver.lib  metrohash.lib  mpack.lib  pal.lib  palCompilerDeps.lib  palUtil.lib  pal_lz4.lib  pal_uuid.lib  stb_sprintf.lib  vam.lib  zstd.lib
20250722a/pal/shared/devdriver/shared/legacy/core/inc/: ddcDefs.h  ddcPlatform.h
20250722a/pal/shared/devdriver/shared/legacy/inc/: gpuopen.h
20250722a/pal/shared/metrohash/src/: metrohash128.h  metrohash64.h
20250722a/sc/HSAIL/ext/libamdhsacode/: amd_elf_image.cpp
20250722a/sc/HSAIL/ext/loader/: loaders.hpp
20250722a/sc/HSAIL/include/public/: cz_id.h
hsail-compiler/lib/loaders/elf/: CMakeLists.txt  elf.hpp
hsail-compiler/lib/loaders/elf/utils/libelf/: elf_update.c  libelf_align.c
pal-static-lib/compute-win/hsail-compiler/lib/loaders/elf/: CMakeLists.txt  elf.cpp  elf.hpp  elf_utils.cpp  elf_utils.hpp
pal-static-lib/compute-win/pal/: CMakeLists.txt
pal-static-lib/compute-win/pal/inc/core/: pal.h  palCmdAllocator.h  palCmdBuffer.h  palDestroyable.h  palDeveloperHooks.h  palDevice.h  palFence.h  palFormat.h  palFormatInfo.h  palGpuMemory.h  palGpuMemoryBindable.h  palImage.h  palLib.h  palMsaaState.h  palPerfExperiment.h  palPipeline.h  palPlatform.h  palQueryPool.h  palQueue.h  palQueueSemaphore.h  palShaderLibrary.h
pal-static-lib/compute-win/pal/inc/gpuUtil/: palCodeObjectTraceSource.h  palGpaSession.h  palGpuUtil.h  palQueueTimingsTraceSource.h  palRenderOpTraceController.h  palTraceSession.h
pal-static-lib/compute-win/pal/inc/util/: palAssert.h  palAutoBuffer.h  palBuddyAllocator.h  palBuddyAllocatorImpl.h  palDbgPrint.h  palDeque.h  palEvent.h  palFile.h  palHashBase.h  palHashBaseImpl.h  palHashMap.h  palHashMapImpl.h  palHashSet.h  palHashSetImpl.h  palInlineFuncs.h  palIntrusiveList.h  palLinearAllocator.h  palMath.h  palMemTracker.h  palMemTrackerImpl.h  palMutex.h  palSpan.h  palStringUtil.h  palStringView.h  palSysMemory.h  palSysUtil.h  palTime.h  palUtil.h  palVector.h
pal-static-lib/compute-win/pal/lib/Release/x64/: DriverUtilsService.lib  SettingsRpcService2.lib  UberTraceService.lib  addrlib.lib  amdrdf.lib  cwpack.lib  (+26 more)
pal-static-lib/compute-win/sc/HSAIL/include/: amd_elf_image.hpp  amd_hsa_code.hpp  amd_hsa_common.h  amd_hsa_elf.h  amd_hsa_kernel_code.h  amd_hsa_loader.hpp  amd_hsa_program.hpp  amd_hsa_queue.h  amd_hsa_signal.h  hsa.h  hsa_ext_finalize.h  hsa_ext_image.h  hsa_ven_amd_loader.h
pal/inc/core/: palCmdBuffer.h  palGpuMemory.h  palImage.h  palQueue.h
pal/inc/util/: palAssert.h  palEvent.h  palSysUtil.h
pal/lib/Release/x64/: amdrdf.lib  ddEventParser.lib  dd_common.lib  devdriver.lib  stb_sprintf.lib  vam.lib
sc/HSAIL/ext/libamdhsacode/: CMakeLists.txt
sc/HSAIL/ext/loader/: CMakeLists.txt
sc/HSAIL/include/: amd_hsa_elf.h
(+152 files in other folders)
